# koi-bot

./: .env  Cargo.toml
koi-bot/: Cargo.toml
koi-bot/src/: main.rs
server/: Cargo.toml
server/.cargo/: config.toml
server/sql/dev_initial/: 00-recreate-db.sql
server/src/: config.rs  error.rs  main.rs
server/src/_dev_utils/: dev_db.rs  mod.rs
server/src/api/: error.rs  mod.rs  routes_signup.rs
server/src/api/rpc/: mod.rs  task_rpc.rs
server/src/ctx/: mod.rs
server/src/model/: base.rs  error.rs  mod.rs  shared_trait.rs  task.rs  user.rs
server/src/model/store/: error.rs  mod.rs
server/tests/: quick_dev.rs
src/: bot.rs  consts.rs  keyboards.rs  main.rs  requests.rs  storages.rs  tg_error.rs  utils.rs
src/handlers/: callback_handlers.rs  dialogue_handlers.rs  mod.rs
src/keyboards/: buy_buttons.rs  mod.rs
tg-api/: Cargo.toml
tg-api/src/: bot.rs
tg-api/src/handlers/: callback_handlers.rs
tg-api/src/requests/: on_chain.rs
