[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
axum = "0.6"
tokio = { workspace = true }
tower-http = { version ="0.4.4", features = ["fs"] }
# --tracing
log = { workspace = true }
tracing = { workspace=true }
tracing-subscriber = { workspace=true }
# --data
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid" ] }
sqlb = "0.4"
# -- json
serde_with = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# --test
serial_test = "2.0.0"
tower-cookies = "0.9.0"
strum_macros = "0.25"
async-trait = "0.1.74"

[dev-dependencies]
httpc-test = "0.1.7"
